# RustCxxCmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: CMakeLists.txt  main.cpp
src/rust_lib/: Cargo.toml
src/rust_lib/src/: lib.rs
